--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_photo"
-    tools:context=".MainActivity">
+    android:background="@color/background"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="parent"
         layout="@layout/tool_bar" />
 
     <com.google.android.material.tabs.TabLayout
@@ -17,8 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/second_primary"
-        android:elevation="25dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:tabIndicatorColor="@color/white">
 
         <com.google.android.material.tabs.TabItem
@@ -41,6 +39,11 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        >
+
+
+    </androidx.viewpager2.widget.ViewPager2>
+
+
+</LinearLayout>
