--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="primary">#B3164E</color>
-    <color name="second_primary">#6A18DF</color>
+    <color name="primary">#3F51B5</color>
+    <color name="second_primary">#2196F3</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#4DD0E1</color>
+    <color name="teal_700">#4DD0E1</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#F2F8F8</color>
+    <color name="background_card_view">#E7FCFC</color>
+    <color name="text_color">#C7C9D5</color>
 </resources>
