--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="background">#F2F8F8</color>
     <color name="background_card_view">#E7FCFC</color>
     <color name="text_color">#C7C9D5</color>
+    <color name="text_color_dark">#FF3700B3</color>
 </resources>
