--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#F2F8F8</color>
     <color name="background_card_view">#E7FCFC</color>
+    <color name="background_calendar">#5DB7FD</color>
     <color name="text_color">#C7C9D5</color>
     <color name="text_color_dark">#FF3700B3</color>
 </resources>
