Implemented the function of filling the main RecyclerView

--- a/app/src/main/res/layout/fragment_future.xml
+++ b/app/src/main/res/layout/fragment_future.xml
@@ -13,7 +13,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/text_view_future"
+        android:id="@+id/textViewNewTermin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Neutermin"
