--- a/app/src/main/res/layout/view_holder.xml
+++ b/app/src/main/res/layout/view_holder.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="4dp"
-    android:backgroundTint="@color/background_card_view"
-    app:cardCornerRadius="4dp"
-    app:cardUseCompatPadding="true"
-    android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
-    >
+    android:layout_marginRight="10dp"
+    android:backgroundTint="@color/background_card_view"
+    android:elevation="4dp"
+    app:cardCornerRadius="4dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,7 +27,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textViewTitleTermin"
+            android:id="@+id/textViewTitleTerminHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -40,13 +39,15 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewDescription"
+            android:id="@+id/textViewDescriptionHolder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textViewTitleTermin"
+            android:layout_below="@id/textViewTitleTerminHolder"
             android:layout_marginLeft="4dp"
             android:layout_toRightOf="@id/imageViewHolder"
             android:text="This is description"
-            android:textSize="20dp" />
+            android:textColor="#000"
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
